BUG 11991: New Charts: bar chart axis lines overlap legend
QA: The legend should now be floating above the tick lines, and indeed
everything else in the chart. A quick pass over charts in general to make
sure the legend still looks right in the main scenarios. Note that the
legend is semitransparent, so you'll still see the tick marks through
the legend. This is expected.

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -106,6 +106,7 @@
     position: relative
     max-height: 100%
     line-height: normal // Chrome bug - setting this prevents broken scrollbar when we haven't hit max-height.
+    z-index: 10
 
     &.bottom, &.top
       left: 20%
